--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
         </div>
 
         <div class="well">
+          <p>Contact Me:</p>
           <ul class="social-media-list">
           
           <li>
@@ -70,7 +71,7 @@
             </a>
           </li>
 
-          <li><a href="mailto:daniel.emaasit@gmail.com">daniel.emaasit@gmail.com</a></li>
+
           
         </ul>
         </div>
