--- a/_includes/book-nav.html
+++ b/_includes/book-nav.html
@@ -1,35 +1,38 @@
 <li><a href="index.html">Introduction</a></li>
 
-<li class="dropdown-header">The R Project</li>
-<li><a href="index.html">What is R?</a></li>
-<li><a href="index.html">Quick Start</a></li>
-<li><a href="index.html">Data Structures</a></li>
-<li><a href="index.html">A Quick Example</a></li>
-<li><a href="index.html">Visualization in R</a></li>
+<li class="dropdown-header">Part I: Getting Started</li>
+<li><a href="index.html">Introduction to Machine Learning</a></li>
+<li><a href="index.html">Introduction to Apache Spark</a></li>
+<li><a href="index.html">Distributed Machine Learning Principles</a></li>
+<li><a href="index.html">Downloading and Installing SparkR</a></li>
+<li><a href="index.html">Data Preprocessing</a></li>
 <li><a href="index.html">Additional Resources</a></li>
 <li><a href="index.html">Summary</a></li>
 
 
-<li class="dropdown-header">Apache Spark</li>
-<li><a href="index.html">What is Apache Spark?</a></li>
-<li><a href="index.html">Downloading and Installing Spark</a></li>
-<li><a href="index.html">Resilient Distributed Datasets</a></li>
-<li><a href="index.html">Loading and Saving Data</a></li>
-<li><a href="index.html">SparkSQL</a></li>
-<li><a href="index.html">Spark Streaming</a></li>
-<li><a href="index.html">Machine Learning with MLib</a></li>
+<li class="dropdown-header">Part II: Supervised Learning</li>
+<li><a href="index.html">Linear Regression</a></li>
+<li><a href="index.html">Regularization</a></li>
+<li><a href="index.html">Logistic Regression</a></li>
+<li><a href="index.html">Classification Using Nearest Neighbors</a></li>
+<li><a href="index.html">Classification Using Naive Bayes</a></li>
+<li><a href="index.html">Classification Using Support Vector Machines</a></li>
+<li><a href="index.html">Classification Using Random Forests</a></li>
 <li><a href="index.html">Summary</a></li>
 
 
-<li class="dropdown-header">SparkR</li>
-<li><a href="index.html">Overview</a></li>
-<li><a href="index.html">SparkR DataFrames</a></li>
-<li><a href="index.html">Creating DataFrames</a></li>
-<li><a href="index.html">DataFrame Operations</a></li>
-<li><a href="index.html">SQL Queries</a></li>
-<li><a href="index.html">Visualization</a></li>
-<li><a href="index.html">Statistical Modeling</a></li>
-<li><a href="index.html">Machine Learning</a></li>
+<li class="dropdown-header">Part III: Unsupervised Learning</li>
+<li><a href="index.html">K-means Clustering</a></li>
+<li><a href="index.html">Hierarchical Clustering</a></li>
+<li><a href="index.html">Association Rules</a></li>
+<li><a href="index.html">Principle Component Analysis</a></li>
+<li><a href="index.html">Expectation Maximization Algorithm</a></li>
+<li><a href="index.html">Summary</a></li>
+
+
+<li class="dropdown-header">Part IV: Real-time Machine Learning</li>
+<li><a href="index.html">Introduction to Spark Streaming</a></li>
+<li><a href="index.html">Creating a Streaming Application</a></li>
 <li><a href="index.html">Summary</a></li>
 
 
